--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,31 +2,30 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"type": "shell",
+			"label": "npm install (functions)",
+			"command": "npm install"
+		},
+		{
 			"type": "func",
 			"command": "host start",
 			"problemMatcher": "$func-node-watch",
 			"isBackground": true,
-			"dependsOn": "npm install (functions)",
-			"options": {
-				"cwd": "${workspaceFolder}/api"
-			}
+			"dependsOn": "npm build (functions)"
 		},
 		{
 			"type": "shell",
-			"label": "npm install (functions)",
-			"command": "npm install",
-			"options": {
-				"cwd": "${workspaceFolder}/api"
-			}
+			"label": "npm build (functions)",
+			"command": "npm run build",
+			"dependsOn": "npm install (functions)",
+			"problemMatcher": "$tsc"
 		},
 		{
 			"type": "shell",
 			"label": "npm prune (functions)",
 			"command": "npm prune --production",
-			"problemMatcher": [],
-			"options": {
-				"cwd": "${workspaceFolder}/api"
-			}
+			"dependsOn": "npm build (functions)",
+			"problemMatcher": []
 		}
 	]
 }
