--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
   },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
-    "typescript": "^4.0.0",
-    "azurite": "^3.15.0"
+    "azurite": "^3.15.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.2",
+    "typescript": "^4.0.0"
   }
 }
